dataset1235/2025-2/2868285114/users/1072499734/executions/3649835072_3921830315.log
== SUBMISSION (2025-08-27 01:39:37)
-- CODE: 
litos = float(input(""))
valor_abastc = (litros)*2.86 + 50
icms = valor_abastc*30/100
valor_total = valor_abastc + icms

print(round(valor_total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:40:17)
-- CODE: 
litos = float(input(""))
valor_abastc = (litros)*2.86 + 50
icms = valor_abastc*34/100
valor_total = valor_abastc + icms

print(round(valor_total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:40:18)
-- CODE: 
litos = float(input(""))
valor_abastc = (litros)*2.86 + 50
icms = valor_abastc*34/100
valor_total = valor_abastc + icms

print(round(valor_total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:40:19)
-- CODE: 
litos = float(input(""))
valor_abastc = (litros)*2.86 + 50
icms = valor_abastc*34/100
valor_total = valor_abastc + icms

print(round(valor_total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:40:21)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
None
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
None
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
None
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
None
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
None
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:41:19)
-- CODE: 
litos = float(input(" "))
valor_abastc = (litros)*2.86 + 50
icms = valor_abastc*34/100
valor_total = valor_abastc + icms

print(round(valor_total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:41:33)
-- CODE: 
litos = float(input(""))
valor_abastc = (litros)*2.86 + 50
icms = valor_abastc*34/100
valor_total = valor_abastc + icms

print(round(valor_total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:40:19)
-- CODE: 
litos = float(input(""))
valor_abastc = (litros)*2.86 + 50
icms = valor_abastc*34/100
valor_total = valor_abastc + icms

print(round(valor_total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:40:15)
-- CODE: 
litos = float(input(""))
valor_abastc = (litros)*2.86 + 50
icms = valor_abastc*34/100
valor_total = valor_abastc + icms

print(round(valor_total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:41:18)
-- CODE: 
litos = float(input(" "))
valor_abastc = (litros)*2.86 + 50
icms = valor_abastc*34/100
valor_total = valor_abastc + icms

print(round(valor_total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_abastc = (litros)*2.86 + 50
                    ^^^^^^
NameError: name 'litros' is not defined. Did you mean: 'litos'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 01:41:39)
-- CODE: 
litros = float(input(""))
valor_abastc = (litros)*2.86 + 50
icms = valor_abastc*34/100
valor_total = valor_abastc + icms

print(round(valor_total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
